# yolo_ros2

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  robot ai stack.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  interfaces.md  operations.md  project-architecture-production.drawio  project-architecture.drawio  workflow.md  yolo-detection-renaming-response_en.md  yolo-detection-ros2-integration-specification.md  yolo-detection-ros2-integration-specification_vi.md
docs/adr/: 0001-decouple-yolo-from-ros2-via-zeromq.md  0002-platform-split-via-compose-override.md  0003-tile-coordinate-contract.md  0004-pc-base-image-pytorch-cuda.md  README.md
docs/superpowers/plans/: 2026-07-08-pc-dev-environment.md
docs/superpowers/specs/: 2026-07-07-pc-dev-environment-design.md
docs/superpowers/test-specs/: 2026-07-07-pc-dev-environment.md
robot-ai-stack/: DUAL_MODEL_RUNTIME.md  docker-compose.dual-model.jetson.yml  docker-compose.dual-model.pc.yml  docker-compose.dual-model.yml  docker-compose.jetson.yml  docker-compose.pc.yml  docker-compose.yml  env.jetson.example  env.pc.example
robot-ai-stack/ros2/: .dockerignore  Dockerfile
robot-ai-stack/ros2/workspace/src/robot_ai_interfaces/: CMakeLists.txt  package.xml
robot-ai-stack/ros2/workspace/src/robot_ai_interfaces/msg/: BBox2D.msg  DetectedInstanceArray.msg  GrassSegment.msg  GrassSegmentationArray.msg  TileImage.msg
robot-ai-stack/yolo/: .dockerignore  Dockerfile  Dockerfile.jetson  Dockerfile.pc  requirements.txt
robot-ai-stack/yolo/app/: detector.py  inference.py  (+1 more)
(+32 files in other folders)
